--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CheemsBot-MD",
+  "name": "Black Queen Bot",
   "version": "4.0.0",
   "description": "Automated whatsapp md bot created using nodejs",
   "main": "xeon.js",
